Fixed main-content overflow issue

--- a/src/stylus/site/content.styl
+++ b/src/stylus/site/content.styl
@@ -2,4 +2,8 @@
   padding-top 52px
   @media ipadsAndUp
     padding-top 0
-    overflow hidden
+
+.site-content:after
+  content " "
+  display table
+  clear both
